Closed Bug 507064 Opened 15 years ago Closed 15 years ago

Clicking on selected text doesn't deselect + move caret on Windows CE

Categories

(Core :: General, defect)

ARM
Windows CE
defect
Not set
normal

Tracking

()

VERIFIED FIXED
mozilla1.9.2a1

People

(Reporter: Dolske, Assigned: Dolske)

References

Details

(Whiteboard: [nv])

Attachments

(1 file)

I'm been noticing this annoyance on the URL bar a lot. Click (or double/triple click) to select some or all of the URL. Then click anywhere on the selection. The URL should be deselected, and the caret moved to the click point. Instead, I usually see either (1) nothing happen or (2) the click being treated as the last click of a double/triple click. [eg, doubleclick to select the just the domain in a url, then wait, then single click on it. Instead of deselecting and moving the caret, the entire URL is selected as if I had tripleclicked.]
Whiteboard: [nv]
Attached patch Patch v.1Splinter Review
Geez. We had GetMessageTime() stubbed out to just return 0, so the mouse handling code was getting confused and thinking every click was part of a double or tripleclick (as long as the mouse wasn't moving between clicks).
Assignee: nobody → dolske
Attachment #391526 - Flags: review?(vladimir)
Blocks: 503707
Comment on attachment 391526 [details] [diff] [review] Patch v.1 Ca we also fix IsIconic? Or at least file a bug to fix it? I think it's done this way because on WinMo there isn't anything "Iconic", but for CE there is.
Attachment #391526 - Flags: review?(vladimir) → review+
(In reply to comment #2) > (From update of attachment 391526 [details] [diff] [review]) > Ca we also fix IsIconic? Or at least file a bug to fix it? Filed bug 507857.
Status: NEW → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.9.2a1
Verified fix on Mozilla/5.0 (Windows; U; WindowsCE 6.0; en-US; rv:1.9.2a2pre) Gecko/20090901 Namoroka/3.6a2pre
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: