Bug 507064 - Clicking on selected text doesn't  deselect + move caret on Windows CE. r=vladimir