widget/src/windows/nsWindowCE.h
@@ -77,7 +77,6 @@
 
 // No-ops for non-existent ce global apis.
 inline void FlashWindow(HWND window, BOOL ignore){}
-inline int  GetMessageTime() {return 0;}
 inline BOOL IsIconic(HWND inWnd){return false;}
 
 class nsWindowCE {
